YelpCamp/v2/readme.md
#Layout and basic styling
* Create our header and footer partials 
* Add in Bootstrap
* 

# 
* Set up route to show form
* Add basic unstyled form

# Style campgrounds page
* Add better header/title
* Make campgrounds display in grid

# Style navbar and form
* Add navbar to all templates
* Style the new campgrounds form

#Add Mongoose
* Install and configure mongoose
* Setup campground model 
* Use campground model inside of our routes

#Show Page
* Review the RESTful routes we've seen so far

RESTFUL routes

name      url       verb    desc.
=========================================
INDEX    /dogs       GET     Display a list of all dog
NEW      /dogs/new   GET     Displays form to make a new dog
CREATE   /dogs       POST    Add new dog to DB
SHOW     /dogs/:id   GET     Shows info about one dog